fixed some spacing, added some images

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5,19 +5,23 @@ body {
     font-family: 'Roboto', sans-serif;
 }
 
+
+/* .background-fix {
+    background-image: url('../img/city.png');
+}
+
+.background-fix::before {
+    content: "";
+    opacity: 0.25;
+    background-repeat: repeat;
+    background-size: cover;
+} */
+
 img {
     width: 75%;
     display: block;
     max-width: 100%;
     margin-left: 20px;
-}
-
-.footer {
-    text-align: center;
-    display: block;
-    margin-top: 50px;
-    background: #012340;
-    color: #F294EC;
 }
 
 a,
@@ -45,4 +49,16 @@ h5,
 
 .header {
     height: 150px;
+}
+
+.lower-half {
+    margin-top: 60px;
+}
+
+.footer {
+    text-align: center;
+    display: block;
+    margin-top: 50px;
+    background: #012340;
+    color: #F294EC;
 }
